Project

General

Profile

Actions

Bug #15793

closed

mon/Monitor: memory leak on Monitor::handle_ping()

Added by xie xingguo almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rados
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We allocate a new JSONFormatter for dumping without deleting it on exit.


Related issues 1 (0 open1 closed)

Copied to Ceph - Backport #15852: jewel: mon/Monitor: memory leak on Monitor::handle_ping()ResolvedAbhishek VarshneyActions
Actions #2

Updated by Kefu Chai almost 8 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Yuri Weinstein almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Loïc Dachary almost 8 years ago

  • Copied to Backport #15852: jewel: mon/Monitor: memory leak on Monitor::handle_ping() added
Actions #5

Updated by Nathan Cutler almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF