mon/Monitor: fix memory leak

Fixes: http://tracker.ceph.com/issues/15793
Signed-off-by: xie xingguo <xie.xingguo@zte.com.cn>